refactor(api)!: 返回更结构化的数据
