# src/lib.rs
@@ -22,8 +22,8 @@ pub async fn main(req: Request, env: Env, ctx: worker::Context) -> worker::Resul
 
     let mut router = Router::with_data(ctx);
 
-    router = router.get_async("/api/get", api::get::handler::handle_get);
-    router = router.get_async("/api/search", api::search::handler::handle_search);
+    router = router.get_async("/api/v1/lyrics/get", api::get::handler::handle_get);
+    router = router.get_async("/api/v1/lyrics/search", api::search::handler::handle_search);
 
     router = router.or_else_any_method_async("/", |_req, _ctx| async move {
         AppError::NotFound.to_response()
